food item manager work in progress, add and edit working, missing image upload and viewing

--- a/src/app/components/add-menu/add-menu.component.html
+++ b/src/app/components/add-menu/add-menu.component.html
@@ -1,6 +1,6 @@
 <div
   mdbModal
-  #addmenumodal="mdbModal"
+  #addMenuModal="mdbModal"
   class="modal fade left"
   tabindex="-1"
   role="dialog"
