--- a/src/app/components/update-menu/update-menu.component.html
+++ b/src/app/components/update-menu/update-menu.component.html
@@ -1,6 +1,6 @@
 <div
   mdbModal
-  #updatemenumodal="mdbModal"
+  #updateMenuModal="mdbModal"
   class="modal fade left"
   tabindex="-1"
   role="dialog"
