--- a/src/app/components/food-item-manager/food-item-manager.component.scss
+++ b/src/app/components/food-item-manager/food-item-manager.component.scss
@@ -5,20 +5,28 @@
   display: flex;
 }
 
+.food-item-manager-content {
+  width: 100%;
+}
+
 .example-action-buttons {
   padding-bottom: 20px;
 }
 
-.example-headers-align .mat-expansion-panel-header-title,
-.example-headers-align .mat-expansion-panel-header-description {
+.food-items-accordion .mat-expansion-panel-header-title,
+.food-items-accordion .mat-expansion-panel-header-description {
   flex-basis: 0;
 }
 
-.example-headers-align .mat-expansion-panel-header-description {
+.food-items-accordion .mat-expansion-panel-header-description {
   justify-content: space-between;
   align-items: center;
 }
 
-.example-headers-align .mat-form-field + .mat-form-field {
+.food-items-accordion .mat-form-field + .mat-form-field {
   margin-left: 8px;
+}
+
+.add-btn {
+  margin-top: 20px;
 }
