add spinner on menu add and update, and fix minor issue in menulist console error

--- a/src/app/components/menu-list/menu-list.component.html
+++ b/src/app/components/menu-list/menu-list.component.html
@@ -55,7 +55,9 @@
     </div>
   </div>
 </div>
-<app-contact-tracing
-  (closed)="onClosedModal($event)"
-  [province]="currentRestaurant.province"
-></app-contact-tracing>
+<div *ngIf="currentRestaurant">
+  <app-contact-tracing
+    (closed)="onClosedModal($event)"
+    [province]="currentRestaurant.province"
+  ></app-contact-tracing>
+</div>
