--- a/src/app/components/update-menu/update-menu.component.html
+++ b/src/app/components/update-menu/update-menu.component.html
@@ -48,8 +48,12 @@
           File must not exceed 5 MB and must be in PDF format...
         </div>
         <div class="alert alert-info" *ngIf="isSubmitted && !isOperationFailed">
-          File is uploading...this window will close if the file uploads
-          successfully!
+          <div class="row">
+            <div class="col-md-2">
+              <mat-spinner diameter="20"></mat-spinner>
+            </div>
+            <div class="col-md-auto">Saving menu...</div>
+          </div>
         </div>
       </div>
     </div>
