--- a/src/app/components/create-menu/create-menu.component.scss
+++ b/src/app/components/create-menu/create-menu.component.scss
@@ -1,4 +1,3 @@
-
 .btn-circle {
   width: 45px;
   height: 45px;
@@ -8,51 +7,42 @@
   border-radius: 50%;
 }
 
-.addSectionContainer{
-  margin-top:-20px; 
+.addSectionContainer {
+  margin-top: -20px;
   justify-content: flex-end;
   display: flex;
 }
+
 .btn-circle-sm {
   width: 35px;
   height: 35px;
   line-height: 35px;
   font-size: 0.9rem;
 }
+
+.submit-button {
+  width: 100%;
+}
+
 .create-menu {
   margin: 80px 0 70px 0;
   position: absolute;
   overflow: auto;
   display: flex;
 }
-.form-group>label {
-  bottom: 34px;
-  left: 15px;
-  position: relative;
-  background-color: white;
-  padding: 0px 5px 0px 5px;
-  font-size: 1.1em;
-  transition: 0.2s;
-  pointer-events: none;
-}
 
-.form-control:focus~label {
-  bottom: 55px;
-}
-
-.form-control:valid~label {
-  bottom: 55px;
-}
 .create-menu h2 {
   padding: 20px 0 20px 0;
   font-family: "Lobster Two";
   text-align: center;
 }
+
 .section-heading {
   padding: 5px 10px;
   font-size: 15px;
   font-weight: bold;
 }
+
 .drag-container {
   margin: 0 25px 25px 0;
   display: inline-block;
@@ -67,6 +57,7 @@
   border-radius: 4px;
   display: block;
 }
+
 .item-box {
   padding: 8px 10px;
   border: solid 1px #ccc;
@@ -82,12 +73,13 @@
   font-size: 14px;
   border-radius: 4px;
 }
+
 .cdk-drag-preview {
   box-sizing: border-box;
   border-radius: 4px;
   box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
-              0 8px 10px 1px rgba(0, 0, 0, 0.14),
-              0 3px 14px 2px rgba(0, 0, 0, 0.12);
+    0 8px 10px 1px rgba(0, 0, 0, 0.14),
+    0 3px 14px 2px rgba(0, 0, 0, 0.12);
   border-radius: 4px;
 }
 
