--- a/src/app/components/menu-section/menu-section.component.html
+++ b/src/app/components/menu-section/menu-section.component.html
@@ -1,7 +1,24 @@
-<div cdkDropList id="{{menuSection._id}}" [cdkDropListData]="menuSection.foodItems"
-  [cdkDropListConnectedTo]="allSectionsList" class="example-list" (cdkDropListDropped)="drop($event)">
-  <input id="section-name-{{menuSection._id}}" type="text" [(ngModel)]="menuSection.name" placeholder="Section Name">
-  <mdb-icon fas icon="trash-alt" class="grey-text pl-2" (click)="removeSection()" style="cursor: pointer;">
-  </mdb-icon>
-  <div class="item-box" *ngFor="let item of menuSection.foodItems" cdkDrag>{{item.name}}</div>
+<div [formGroup]="sectionForm">
+  <div cdkDropList id="{{sectionForm.controls._id.value}}" [cdkDropListData]="sectionForm.controls.foodItems.value"
+    [cdkDropListConnectedTo]="allSectionsList" class="example-list" (cdkDropListDropped)="drop($event)">
+    <!-- <input id="section-name-{{menuSection._id}}" type="text" [(ngModel)]="menuSection.name" placeholder="Section Name"> -->
+    <div class="md-form  md-outline">
+      <div class=" d-flex col-md-12 ">
+        <input type="text" id="name-{{sectionForm.controls._id.value}}" formControlName="name" class="form-control"
+          mdbInput mdbValidate required />
+        <label class="ml-3" for="name-{{sectionForm.controls._id.value}}">Section Name</label>
+        <mdb-error class="ml-3" *ngIf="sectionForm.controls.name.invalid && (sectionForm.controls.name.dirty ||
+        sectionForm.controls.name.touched)">
+          Section name is required
+        </mdb-error>
+        <mdb-success class="ml-3" *ngIf="sectionForm.controls.name.valid && (sectionForm.controls.name.dirty
+        || sectionForm.controls.name.touched)">Valid
+        </mdb-success>
+        <mdb-icon fas icon="trash-alt" class="grey-text pl-2" (click)="removeSection()" style="cursor: pointer;">
+        </mdb-icon>
+      </div>
+
+    </div>
+    <div class="item-box" *ngFor="let item of sectionForm.controls.foodItems.value" cdkDrag>{{item.name}}</div>
+  </div>
 </div>
