--- a/src/app/components/create-menu/create-menu.component.html
+++ b/src/app/components/create-menu/create-menu.component.html
@@ -1,20 +1,36 @@
 <div class="create-menu container-fluid">
   <div class="container">
-    <div class="d-flex flex-column ">
+    <div class="d-flex flex-column">
       <h2>Customize your Menu</h2>
       <form [formGroup]="menuForm" (ngSubmit)="onSubmit()">
         <div class="col-md-11">
-
           <div class="md-form md-outline">
             <div class="d-flex">
               <mdb-icon fas icon="tag" class="prefix grey-text"></mdb-icon>
-              <input type="text" id="ctrlMenuName" formControlName="ctrlMenuName" class="form-control" mdbInput
-                mdbValidate required />
+              <input
+                type="text"
+                id="ctrlMenuName"
+                formControlName="ctrlMenuName"
+                class="form-control"
+                mdbInput
+                mdbValidate
+                required
+              />
               <label for="ctrlMenuName">Menu Name</label>
-              <mdb-error *ngIf="ctrlMenuName.invalid && (ctrlMenuName.dirty || ctrlMenuName.touched)">
+              <mdb-error
+                *ngIf="
+                  ctrlMenuName.invalid &&
+                  (ctrlMenuName.dirty || ctrlMenuName.touched)
+                "
+              >
                 Menu name is required
               </mdb-error>
-              <mdb-success *ngIf="ctrlMenuName.valid && (ctrlMenuName.dirty || ctrlMenuName.touched)">Valid
+              <mdb-success
+                *ngIf="
+                  ctrlMenuName.valid &&
+                  (ctrlMenuName.dirty || ctrlMenuName.touched)
+                "
+                >Valid
               </mdb-success>
             </div>
           </div>
@@ -22,27 +38,59 @@
           <div>
             <div class="drag-container col-md-3">
               <div class="section-heading">Food Bank</div>
-              <div cdkDropList id="foodItemsList" #foodItemList="cdkDropList" [cdkDropListData]="foodItems"
-                [cdkDropListConnectedTo]="allSectionsList" class="item-list" (cdkDropListDropped)="drop($event)">
-                <div class="item-box" *ngFor="let item of foodItems" cdkDrag>{{item.name}}</div>
+              <div
+                cdkDropList
+                id="foodItemsList"
+                #foodItemList="cdkDropList"
+                [cdkDropListData]="foodItems"
+                [cdkDropListConnectedTo]="allSectionsList"
+                class="item-list"
+                (cdkDropListDropped)="drop($event)"
+              >
+                <div class="item-box" *ngFor="let item of foodItems" cdkDrag>
+                  {{ item.name }}
+                </div>
               </div>
+              <div class="addSectionContainer">
+                <button
+                  (click)="openFoodItemModal('addFoodItemModal')"
+                  class="btn btn-primary btn-circle btn-circle-sm m-1"
+                >
+                  <i class="fa fa-plus"></i>
+                </button>
+              </div>
+              <app-add-food-item
+                #addFoodItem
+                (closed)="onClosedModal($event)"
+              ></app-add-food-item>
             </div>
             <div class="drag-container col-md-8">
               <div class="section-heading">Menu Creator</div>
-
-
               <div formArrayName="ctrlMenuSections">
-                <div cdkDropList #sectionItemList="cdkDropList" [cdkDropListData]="getSectionControls()"
-                  (cdkDropListDropped)="drop($event)" style="cursor: move;">
-                  <div *ngFor="let menuSection of getSectionControls(); let i=index">
-                    <app-menu-section cdkDrag [index]="i" [allSectionsList]="allSectionsList"
-                      (sectionRemoved)="onSectionRemoved($event)" [sectionForm]="getSectionControlsIndex(i)">
+                <div
+                  cdkDropList
+                  #sectionItemList="cdkDropList"
+                  [cdkDropListData]="getSectionControls()"
+                  (cdkDropListDropped)="drop($event)"
+                  style="cursor: move"
+                >
+                  <div
+                    *ngFor="
+                      let menuSection of getSectionControls();
+                      let i = index
+                    "
+                  >
+                    <app-menu-section
+                      cdkDrag
+                      [index]="i"
+                      [allSectionsList]="allSectionsList"
+                      (sectionRemoved)="onSectionRemoved($event)"
+                      [sectionForm]="getSectionControlsIndex(i)"
+                    >
                     </app-menu-section>
                   </div>
                 </div>
               </div>
-
-
 
               <!-- <div cdkDropList #sectionItemList="cdkDropList" [cdkDropListData]="menuSections"
               (cdkDropListDropped)="drop($event)" style="cursor: move;">
@@ -57,17 +105,25 @@
             </div> -->
 
               <div class="addSectionContainer">
-                <button (click)="addSection()" class="btn btn-primary btn-circle btn-circle-sm m-1"><i
-                    class="fa fa-plus"></i></button>
+                <button
+                  (click)="addSection()"
+                  class="btn btn-primary btn-circle btn-circle-sm m-1"
+                >
+                  <i class="fa fa-plus"></i>
+                </button>
               </div>
-
             </div>
           </div>
-          <button type="submit" class="submit-button" mat-raised-button
-            [disabled]="!menuForm.valid || allSectionsList.length===1">
+          <button
+            type="submit"
+            class="submit-button"
+            mat-raised-button
+            [disabled]="!menuForm.valid || allSectionsList.length === 1"
+          >
             Submit
           </button>
         </div>
       </form>
     </div>
   </div>
+</div>
