--- a/src/app/components/menu-section/menu-section.component.html
+++ b/src/app/components/menu-section/menu-section.component.html
@@ -19,6 +19,13 @@
       </div>
 
     </div>
-    <div class="item-box" *ngFor="let item of sectionForm.controls.foodItems.value" cdkDrag>{{item.name}}</div>
+    <div class="item-box" *ngFor="let item of sectionForm.controls.foodItems.value" cdkDrag>
+      {{item.name}}
+    </div>
+    <mat-error>
+      <span class="ml-3" *ngIf="sectionForm.controls.foodItems.value.length===0">
+        Add Food To Section is required
+      </span>
+    </mat-error>
   </div>
 </div>
