add type="button" to add section since the prevent submit

--- a/src/app/components/create-menu/create-menu.component.html
+++ b/src/app/components/create-menu/create-menu.component.html
@@ -70,7 +70,7 @@
             </div> -->
 
               <div class="addSectionContainer">
-                <button (click)="addSection()" class="btn btn-primary btn-circle btn-circle-sm m-1">
+                <button (click)="addSection()" type="button" class="btn btn-primary btn-circle btn-circle-sm m-1">
                   <i class="fa fa-plus"></i>
                 </button>
               </div>
