--- a/src/app/components/user-board/user-board.component.html
+++ b/src/app/components/user-board/user-board.component.html
@@ -13,38 +13,23 @@
               <div class="col-md-10">
                 <div class="row justify-content-end">
                   <div class="col-sm-2">
-                    <button
-                      mat-raised-button
-                      class="btn btn-block"
-                      (click)="goToRoute('/create-menu')"
-                    >
+                    <button mat-raised-button class="btn btn-block"
+                      (click)="goToRoute('/create-menu/'+restaurant._id+'/'+'new-menu')">
                       Create Menu
                     </button>
                   </div>
                   <div class="col-sm-auto">
-                    <button
-                      mat-raised-button
-                      class="btn btn-block"
-                      (click)="goToRoute('/detail/' + restaurant._id)"
-                    >
+                    <button mat-raised-button class="btn btn-block" (click)="goToRoute('/detail/' + restaurant._id)">
                       Manage Menus
                     </button>
                   </div>
                   <div class="col-sm-auto">
-                    <button
-                      mat-raised-button
-                      class="btn btn-block"
-                      (click)="goToRoute('/menus/' + restaurant._id)"
-                    >
+                    <button mat-raised-button class="btn btn-block" (click)="goToRoute('/menus/' + restaurant._id)">
                       View Menus
                     </button>
                   </div>
                   <div class="col-sm-2">
-                    <button
-                      mat-raised-button
-                      class="btn btn-block"
-                      (click)="goToRoute('/qrcode/' + restaurant._id)"
-                    >
+                    <button mat-raised-button class="btn btn-block" (click)="goToRoute('/qrcode/' + restaurant._id)">
                       Get QR Code
                     </button>
                   </div>
