--- a/src/app/components/display-menu/display-menu.component.scss
+++ b/src/app/components/display-menu/display-menu.component.scss
@@ -1,24 +1,29 @@
 .display-menu {
-  margin: 80px 0 70px 0;
+  margin: 80px auto;
   overflow: auto;
   display: flex;
   justify-content: center;
   align-items: center;
+
+  width: 90%;
+  border-radius: 20px;
+  background-color: rgba(247, 242, 242, 0.527);
 }
 .title-container {
   display: flex;
   justify-content: center;
   align-items: center;
-  border: solid 5px rgb(243, 243, 243);
+  border: solid 5px rgb(247, 245, 245);
   border-radius: 50px;
+  background-color: var(--accent-color);
+}
+.hr {
+  background-color: var(--accent-color);
 }
 .menu-title {
   font-weight: 600;
 }
-.discout {
-  -webkit-text-decoration-line: line-through; /* Safari */
-  text-decoration-line: line-through;
-}
+
 .section-container {
   display: flex;
   justify-content: center;
@@ -31,6 +36,15 @@
     font-weight: 400;
     text-transform: capitalize;
   }
+}
+.small-img {
+  width: 40px;
+
+  border-radius: 30px;
+}
+.mat-icon {
+  vertical-align: middle;
+  color: var(--accent-color);
 }
 
 .food-item-manager {
