--- a/src/app/components/food-item-manager/food-item-manager.component.html
+++ b/src/app/components/food-item-manager/food-item-manager.component.html
@@ -14,33 +14,58 @@
       <div *ngFor="let foodItem of foodItems">
         <mat-expansion-panel>
           <mat-expansion-panel-header>
-            <mat-panel-title> {{ foodItem.name }} </mat-panel-title>
+            <mat-panel-title
+              ><div style="padding-right: 10px">
+                <img class="small-img" src="{{ foodItem.imageUrl }}" />
+              </div>
+              <h5 style="font-weight: 400; padding-top: 8px">
+                {{ foodItem.name }}
+                <mat-icon *ngIf="foodItem.promotionPrice > 0"
+                  >verified</mat-icon
+                >
+              </h5>
+            </mat-panel-title>
             <mat-panel-description>
               ${{ foodItem.price }}
-              <mat-icon>fastfood</mat-icon>
+              <mat-icon color="primary">fastfood</mat-icon>
             </mat-panel-description>
           </mat-expansion-panel-header>
           <div>
             <div>
               <div class="row">
-                <div class="col-md-9">
+                <div class="col-md-6 food-description">
                   {{ foodItem.description }}
+                  <div class="vertical-divider"></div>
+                  <div>
+                    <mat-icon color="primary">room_service</mat-icon>
+                    <span> Calories: </span>{{ foodItem.calories }} kcal
+                  </div>
+                  <div class="vertical-divider"></div>
+                  <div style="padding-bottom: 20px">
+                    <mat-chip-list aria-label="Fish selection">
+                      <div *ngFor="let tag of foodItem.tags">
+                        <mat-chip color="primary" selected
+                          ><img
+                            style="padding-right: 5px"
+                            *ngIf="tag.toLocaleLowerCase() === 'spicy'"
+                            src="/assets/img/tag-images/spicy.png"
+                          />
+                          <img
+                            style="padding-right: 5px"
+                            *ngIf="tag.toLocaleLowerCase() === 'vegetarian'"
+                            src="/assets/img/tag-images/vegetarian.png"
+                          />{{ tag }}</mat-chip
+                        >
+                      </div>
+                    </mat-chip-list>
+                  </div>
                 </div>
                 <div class="col-md-auto">
-                  <img width="170px" [src]="foodItem.imageUrl" />
+                  <img width="300px" [src]="foodItem.imageUrl" />
                 </div>
               </div>
             </div>
-            <div class="vertical-divider"></div>
-            <div><span>Calories: </span>{{ foodItem.calories }}</div>
-            <div class="vertical-divider"></div>
-            <div>
-              <mat-chip-list aria-label="Fish selection">
-                <div *ngFor="let tag of foodItem.tags">
-                  <mat-chip color="primary" selected>{{ tag }}</mat-chip>
-                </div>
-              </mat-chip-list>
-            </div>
+
             <div>
               <div class="action-buttons">
                 <button
